# sicompass

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  README.md  THIRD-PARTY-LICENSES.html  about.hbs  about.toml  config-rs.json  dist-workspace.toml  flake.nix  license  meson.build
.cargo/: config.toml  run.bat
.claude/: settings.json
.claude/hooks/: check-lib-boundary.sh  check-test-rewrite.sh  check-tests-written.sh  check-workflow-sync.sh  run-tests.sh
.github/workflows/: build.yml  licenses.yml  release-linux.yml  release-on-tag.yml  release.yml
assets/: equipment1.json  equipment2.json  sicompass.desktop  sicompass.icns
docs/: tutorial-guidelines.md
lib/lib_builtins/: Cargo.toml
lib/lib_builtins/src/: lib.rs
lib/lib_chatclient/: Cargo.toml  meson.build
lib/lib_chatclient-rs/: Cargo.toml
lib/lib_chatclient-rs/src/: lib.rs
lib/lib_chatclient/include/: chatclient.h  chatclient_provider.h
lib/lib_chatclient/locales/: de-BE.ftl  en-US.ftl  fr-BE.ftl  nl-BE.ftl
lib/lib_chatclient/src/: auth.rs  chatclient.c  lib.rs  members.rs  messages.rs  provider.c  rooms.rs  sync.rs
lib/lib_claude/: Cargo.toml
lib/lib_claude/src/: events.rs  lib.rs  render.rs  session.rs
lib/lib_editor/: Cargo.toml
lib/lib_editor/src/: lib.rs  parse.rs
lib/lib_emailclient/: Cargo.toml  meson.build
lib/lib_emailclient-rs/: Cargo.toml
lib/lib_emailclient-rs/src/: idle.rs  lib.rs  net.rs  oauth2.rs
lib/lib_emailclient/include/: emailclient.h  emailclient_idle.h  emailclient_oauth2.h  emailclient_provider.h
lib/lib_emailclient/locales/: de-BE.ftl  en-US.ftl  fr-BE.ftl  nl-BE.ftl
lib/lib_emailclient/src/: cache.rs  connection.rs  emailclient.c  emailclient_idle.c  idle.rs  lib.rs  net.rs  oauth2.c  oauth2.rs  provider.c
lib/lib_ffon/: meson.build
lib/lib_ffon/include/: ffon.h
lib/lib_ffon/src/: ffon.c
lib/lib_filebrowser/: Cargo.toml  meson.build
lib/lib_filebrowser-rs/: Cargo.toml
lib/lib_filebrowser-rs/src/: lib.rs
lib/lib_filebrowser/include/: filebrowser.h  filebrowser_provider.h
lib/lib_filebrowser/locales/: de-BE.ftl  en-US.ftl  fr-BE.ftl  nl-BE.ftl
lib/lib_filebrowser/src/: filebrowser.c  lib.rs  provider.c
lib/lib_friendlystore/: meson.build
lib/lib_friendlystore/include/: friendlystore.h
lib/lib_friendlystore/src/: friendlystore.c
lib/lib_notebook/: meson.build
lib/lib_notebook/include/: notebook.h
lib/lib_notebook/src/: notebook.c
lib/lib_provider/: meson.build
lib/lib_provider/include/: platform.h  provider_interface.h  provider_tags.h
lib/lib_provider/src/: config.c  platform.c  provider.c  tags.c
lib/lib_remote/: Cargo.toml  meson.build  remote.ts
lib/lib_remote-rs/: Cargo.toml
lib/lib_remote-rs/src/: lib.rs
lib/lib_sales_demo/: Cargo.toml  sales_demo.ts
lib/lib_sales_demo/assets/: equipment1.json
lib/lib_sales_demo/src/: lib.rs
lib/lib_settings/: Cargo.toml  meson.build
lib/lib_settings-rs/: Cargo.toml
lib/lib_settings-rs/src/: lib.rs
lib/lib_settings/include/: settings_provider.h
lib/lib_settings/locales/: de-BE.ftl  en-US.ftl  fr-BE.ftl  nl-BE.ftl
lib/lib_settings/src/: lib.rs  settings_provider.c
lib/lib_settings/src/store/: catalog.rs  cert.rs  mod.rs  tiers.rs
lib/lib_shell/: Cargo.toml
lib/lib_shell/src/: lib.rs
lib/lib_store/: Cargo.toml
lib/lib_store/locales/: de-BE.ftl  en-US.ftl  fr-BE.ftl  nl-BE.ftl
lib/lib_store/src/: catalog.rs  cert.rs  lib.rs
lib/lib_terminal/: Cargo.toml
lib/lib_terminal/locales/: de-BE.ftl  en-US.ftl  fr-BE.ftl  nl-BE.ftl
lib/lib_terminal/src/: altscreen_detect.rs  emulator.rs  interactive_detect.rs  lib.rs
lib/lib_texteditor/: Cargo.toml
lib/lib_texteditor/locales/: de-BE.ftl  en-US.ftl  fr-BE.ftl  nl-BE.ftl
lib/lib_texteditor/src/: lib.rs  parse.rs
lib/lib_tutorial/: Cargo.toml  tutorial.ts
lib/lib_tutorial/assets/: ffon.json
lib/lib_tutorial/locales/: de-BE.ftl  en-US.ftl  fr-BE.ftl  nl-BE.ftl
lib/lib_tutorial/src/: lib.rs
lib/lib_updater/: Cargo.toml  build.rs  manifest.xml
lib/lib_updater/src/: apply_windows.rs  github.rs  lib.rs  plugin.rs  signature.rs
lib/lib_webbrowser/: Cargo.toml  meson.build
lib/lib_webbrowser-rs/: Cargo.toml
lib/lib_webbrowser-rs/src/: lib.rs
scripts/: copy_dlls.py  remote.ts  sales_demo.ts  tutorial.ts
sdk-rs/: Cargo.toml
sdk-rs/src/: ffon.rs  meta.rs  platform.rs  provider.rs  tags.rs
shaders/: background.frag  image.vert  rectangle.vert  text.frag  text.vert  text_color.frag  text_frag.spv  text_vert.spv
src/: caret.c  caret.h  events.c  ffon.c  ffon_editor.h  handlers.c  image.c  image.h  json.c  list.c  main.c  main.h  main1.c  meson.build  provider.c  provider.h  rectangle.c  rectangle.h  render.c  sfon.c  sfon_editor.h  state.c  text.c  text.h  update.c  view.c  view.h
src/desicompass/: Cargo.toml  main.c  meson.build
src/desicompass-rs/: Cargo.toml
src/json/: events.c  handlers.c  json.c  list.c  main.c  render.c  sf.json  sfon.c  sfon_editor.h  state.c  update.c
tests/: meson.build  test_accesskit.c  test_clipboard.c  test_example.c
tests/integration/: harness.c  harness.h  meson.build  test_integration.c
tests/lib_chatclient/: meson.build  test_chatclient.c
tests/lib_emailclient/: meson.build  test_emailclient.c
tests/lib_ffon/: meson.build  test_ffon_element.c  test_ffon_idarray.c  test_ffon_navigation.c  test_ffon_object.c  test_ffon_serialization.c
tests/lib_filebrowser/: meson.build  test_filebrowser.c  test_filebrowser_provider.c
tests/lib_provider/: meson.build  test_provider_config.c  test_provider_interface.c  test_provider_platform.c  test_provider_tags.c
tests/lib_remote/: remote.test.ts
tests/lib_sales_demo/: sales_demo.test.ts
tests/lib_settings/: meson.build  test_settings.c
tests/lib_tutorial/: tutorial.test.ts
tests/lib_webbrowser/: meson.build  test_webbrowser.c
tests/sicompass/: meson.build  test_caret.c  test_checkmark.c  test_events.c  test_handlers.c  test_handlers_advanced.c  test_list.c  test_provider.c  test_state.c  test_text_math.c  test_unicode_search.c  test_update.c
(+115 files in other folders)
