[workspace]
members = [
    "sdk",
    "lib/lib_tutorial",
    "lib/lib_settings",
    "lib/lib_filebrowser",
    "lib/lib_webbrowser",
    "lib/lib_chatclient",
    "lib/lib_emailclient",
    "lib/lib_remote",
    "src/sicompass",
    "src/desicompass-rs",
    "src/loginsicompass-rs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# SDK
sicompass-sdk = { path = "sdk" }
sicompass-tutorial = { path = "lib/lib_tutorial" }
sicompass-settings = { path = "lib/lib_settings" }
sicompass-filebrowser = { path = "lib/lib_filebrowser" }
sicompass-webbrowser = { path = "lib/lib_webbrowser" }
sicompass-chatclient = { path = "lib/lib_chatclient" }
sicompass-emailclient = { path = "lib/lib_emailclient" }
sicompass-remote = { path = "lib/lib_remote" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graphics
ash = "0.38"
glam = "0.29"

# Text rendering
freetype = "0.7"
rustybuzz = "0.20"

# Image loading
image = { version = "0.25", features = ["jpeg", "png", "webp"] }

# Windowing + events
sdl3 = "0.12"

# Accessibility
accesskit = "0.16"
accesskit_unix = "0.12"
accesskit_windows = "0.23"
accesskit_macos = "0.17"
windows = { version = "0.58", features = ["Win32_Foundation"] }

# Unicode
unicode-normalization = "0.1"

# Fuzzy search
nucleo-matcher = "0.3"

# Natural sort
natord = "1"

# Async / networking (library providers, later phases)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }

# Email client
imap = { version = "2", default-features = false, features = ["tls"] }
imap-proto = "0.10"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
native-tls = "0.2"

# HTML parsing
scraper = "0.22"

# URL handling
url = "2"

# Plugin loading
libloading = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# System
libc = "0.2"

# Windows .exe icon embedding (build-time only)
winres = "0.1"

# Test dependencies
mockall = "0.13"
tempfile = "3"
wiremock = "0.6"

# Optimize heavy third-party deps even in debug builds — html5ever and the
# TLS/HTTP stack are 10-50x slower without optimizations.
[profile.dev.package.chromiumoxide]
opt-level = 2
[profile.dev.package.chromiumoxide_cdp]
opt-level = 2
[profile.dev.package.async-tungstenite]
opt-level = 2
[profile.dev.package.html5ever]
opt-level = 2
[profile.dev.package.scraper]
opt-level = 2
[profile.dev.package.reqwest]
opt-level = 2
[profile.dev.package.hyper]
opt-level = 2
[profile.dev.package.hyper-util]
opt-level = 2
[profile.dev.package.rustls]
opt-level = 2
[profile.dev.package.ring]
opt-level = 2
