[workspace]
members = [
    "sdk",
    "lib/lib_tutorial",
    "lib/lib_settings",
    "lib/lib_filebrowser",
    "lib/lib_webbrowser",
    "lib/lib_chatclient",
    "lib/lib_emailclient",
    "lib/lib_editor",
    "lib/lib_remote",
    "lib/lib_sales_demo",
    "lib/lib_shell",
    "lib/lib_terminal",
    "lib/lib_builtins",
    "src/sicompass",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
# SDK
sicompass-sdk = { path = "sdk" }
sicompass-tutorial = { path = "lib/lib_tutorial" }
sicompass-settings = { path = "lib/lib_settings" }
sicompass-filebrowser = { path = "lib/lib_filebrowser" }
sicompass-webbrowser = { path = "lib/lib_webbrowser" }
sicompass-chatclient = { path = "lib/lib_chatclient" }
sicompass-emailclient = { path = "lib/lib_emailclient" }
sicompass-editor = { path = "lib/lib_editor" }
sicompass-remote = { path = "lib/lib_remote" }
sicompass-sales-demo = { path = "lib/lib_sales_demo" }
sicompass-shell = { path = "lib/lib_shell" }
sicompass-terminal = { path = "lib/lib_terminal" }
sicompass-builtins = { path = "lib/lib_builtins" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graphics
ash = "0.38"
glam = "0.32"

# Text rendering
freetype = "0.7"
rustybuzz = "0.20"

# Image loading
image = { version = "0.25", features = ["jpeg", "png", "webp"] }

# Windowing + events
sdl3 = "0.18"

# Accessibility
accesskit = "0.24"
accesskit_unix = "0.21"
accesskit_windows = "0.33"
accesskit_macos = "0.26"
windows = { version = "0.62", features = ["Win32_Foundation"] }

# Unicode
unicode-normalization = "0.1"

# Fuzzy search
nucleo-matcher = "0.3"

# Natural sort
natord = "1"

# Async / networking (library providers, later phases)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "blocking", "cookies", "form"] }

# Email client
imap = { version = "2", default-features = false, features = ["tls"] }
# Pinned to 0.10 to match the imap 2.x crate's re-exported imap-proto types;
# imap-proto 0.16 requires imap 3.x, which has no stable release.
imap-proto = "0.10"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
native-tls = "0.2"
rusqlite = { version = "0.39", features = ["bundled"] }

# HTML parsing
scraper = "0.27"

# URL handling
url = "2"

# Plugin loading
libloading = "0.9"

# PTY (interactive shell sessions used by sicompass-shell)
portable-pty = "0.9"

# ANSI/VT parser (interactive terminal emulator inside sicompass-terminal)
vte = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# System
libc = "0.2"

# Windows .exe icon embedding (build-time only)
winres = "0.1"

# Test dependencies
mockall = "0.14"
tempfile = "3"
wiremock = "0.6"

# Optimize heavy third-party deps even in debug builds — html5ever and the
# TLS/HTTP stack are 10-50x slower without optimizations.
[profile.dev.package.chromiumoxide]
opt-level = 2
[profile.dev.package.chromiumoxide_cdp]
opt-level = 2
[profile.dev.package.async-tungstenite]
opt-level = 2
[profile.dev.package.html5ever]
opt-level = 2
[profile.dev.package.scraper]
opt-level = 2
[profile.dev.package.reqwest]
opt-level = 2
[profile.dev.package.hyper]
opt-level = 2
[profile.dev.package.hyper-util]
opt-level = 2
[profile.dev.package.rustls]
opt-level = 2
[profile.dev.package.ring]
opt-level = 2
