[workspace]
members = [
    "lib/lib_tutorial",
    "lib/lib_settings",
    "lib/lib_filebrowser",
    "lib/lib_webbrowser",
    "lib/lib_chatclient",
    "lib/lib_emailclient",
    "lib/lib_texteditor",
    "lib/lib_remote",
    "lib/lib_sales_demo",
    "lib/lib_shell",
    "lib/lib_terminal",
    "lib/lib_claude",
    "lib/lib_builtins",
    "lib/lib_updater",
    "src/sicompass",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "GPL-3.0-only"

[workspace.dependencies]
# SDK — published to crates.io from the sicompass-plugin-sdk repo. Third-party
# plugin authors consume the same version. Local development uses the path
# override in [patch.crates-io] below so edits in ../sicompass-plugin-sdk are
# picked up without a publish round-trip.
sicompass-sdk = "0.1.5"
sicompass-tutorial = { path = "lib/lib_tutorial" }
sicompass-settings = { path = "lib/lib_settings" }
sicompass-filebrowser = { path = "lib/lib_filebrowser" }
sicompass-webbrowser = { path = "lib/lib_webbrowser" }
sicompass-chatclient = { path = "lib/lib_chatclient" }
sicompass-emailclient = { path = "lib/lib_emailclient" }
sicompass-text-editor = { path = "lib/lib_texteditor" }
sicompass-remote = { path = "lib/lib_remote" }
sicompass-sales-demo = { path = "lib/lib_sales_demo" }
sicompass-shell = { path = "lib/lib_shell" }
sicompass-terminal = { path = "lib/lib_terminal" }
sicompass-claude = { path = "lib/lib_claude" }
sicompass-builtins = { path = "lib/lib_builtins" }
sicompass-updater = { path = "lib/lib_updater" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography (offline license-certificate verification in lib_settings;
# also used by sicompass-updater for plugin signature verification)
ed25519-dalek = "3"
base64 = "0.22"
sha2 = "0.11"

# Versioning (used by sicompass-updater for app + plugin version comparison)
semver = "1"

# Graphics
ash = "0.38"
glam = "0.33"

# Text rendering
freetype = "0.8"
rustybuzz = "0.20"

# Image loading
image = { version = "0.25", features = ["jpeg", "png", "webp"] }

# Windowing + events
sdl3 = "0.18"

# Accessibility
accesskit = "0.24"
accesskit_unix = "0.22"
accesskit_windows = "0.34"
accesskit_macos = "0.26"
windows = { version = "0.62", features = ["Win32_Foundation"] }

# Language detection — tags each spoken AccessKit node with a BCP-47 language
# so the screen reader speaks each item in its own language.
whatlang = "0.18"

# Unicode
unicode-normalization = "0.1"

# Internationalization (Project Fluent)
fluent = "0.17"
fluent-langneg = "0.14"
unic-langid = "0.9"
intl-memoizer = "0.5"

# Fuzzy search
nucleo-matcher = "0.3"

# Natural sort
natord = "1"

# Async / networking (library providers, later phases)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "blocking", "cookies", "form"] }

# Email client
imap = { version = "2", default-features = false, features = ["tls"] }
# Pinned to 0.10 to match the imap 2.x crate's re-exported imap-proto types;
# imap-proto 0.16 requires imap 3.x, which has no stable release.
imap-proto = "0.10"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
native-tls = "0.2"
rusqlite = { version = "0.40", features = ["bundled"] }

# HTML parsing
scraper = "0.27"

# URL handling
url = "2"

# Plugin loading
libloading = "0.9"

# PTY (interactive shell sessions used by sicompass-shell)
portable-pty = "0.9"

# ANSI/VT parser (interactive terminal emulator inside sicompass-terminal)
vte = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# System
libc = "0.2"

# Windows .exe icon embedding (build-time only)
winres = "0.1"

# Test dependencies
mockall = "0.15"
tempfile = "3"
wiremock = "0.6"

# Local override so SDK edits in the sibling repo are picked up immediately.
# Uncomment this block during active SDK development; the CI release build
# (cargo-dist) checks out only this repo, so a path patch pointing at a
# missing sibling fails the build at manifest-parse time. Keeping it
# disabled by default makes `git push <tag>` releases work without manual
# surgery; re-enable locally when iterating on SDK changes.
#
# [patch.crates-io]
# sicompass-sdk = { path = "../sicompass-plugin-sdk" }

# Optimize heavy third-party deps even in debug builds — html5ever and the
# TLS/HTTP stack are 10-50x slower without optimizations.
[profile.dev.package.chromiumoxide]
opt-level = 2
[profile.dev.package.chromiumoxide_cdp]
opt-level = 2
[profile.dev.package.async-tungstenite]
opt-level = 2
[profile.dev.package.html5ever]
opt-level = 2
[profile.dev.package.scraper]
opt-level = 2
[profile.dev.package.reqwest]
opt-level = 2
[profile.dev.package.hyper]
opt-level = 2
[profile.dev.package.hyper-util]
opt-level = 2
[profile.dev.package.rustls]
opt-level = 2
[profile.dev.package.ring]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
