[package]
name = "sicompass-chatclient"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass Matrix chat client provider"

[dependencies]
sicompass-sdk = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
