[package]
publish = false  # internal crate, never published to crates.io
name = "sicompass-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass Claude Code provider (streaming JSON)"

[dependencies]
sicompass-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
