[package]
name = "sicompass-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass editor provider"

[dependencies]
sicompass-sdk = { workspace = true }
serde_json = { workspace = true }
trash = "5"

[dev-dependencies]
tempfile = { workspace = true }
