[package]
name = "sicompass-emailclient"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass IMAP/SMTP email client provider"

[dependencies]
sicompass-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
