[package]
name = "sicompass-emailclient"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass IMAP/SMTP email client provider"

[dependencies]
sicompass-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
imap = { workspace = true }
imap-proto = { workspace = true }
lettre = { workspace = true }
native-tls = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
