[package]
name = "sicompass-filebrowser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass file browser provider"

[dependencies]
sicompass-sdk = { workspace = true }
libc = { workspace = true }
natord = { workspace = true }
trash = "5"

[dev-dependencies]
tempfile = { workspace = true }
