[package]
publish = false  # internal crate, never published to crates.io
name = "sicompass-sales-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass sales demo provider (TypeScript script wrapper)"

[dependencies]
sicompass-sdk = { workspace = true }
