[package]
name = "sicompass-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass settings provider — reads/writes settings.json"

[dependencies]
sicompass-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
