[package]
publish = false  # internal crate, never published to crates.io
name = "sicompass-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass settings provider — reads/writes settings.json, hosts the Store sub-node"

[dependencies]
sicompass-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
