[package]
publish = false  # internal crate, never published to crates.io
name = "sicompass-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass store provider — app-store catalog and commercial-license verification"

[dependencies]
sicompass-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
