[package]
publish = false  # internal crate, never published to crates.io
name = "sicompass-text-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass text editor provider"

[dependencies]
sicompass-sdk = { workspace = true }
serde_json = { workspace = true }
trash = "5"

[dev-dependencies]
tempfile = { workspace = true }
