[package]
name = "sicompass-webbrowser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass web browser provider"

[dependencies]
sicompass-sdk = { workspace = true }
reqwest = { workspace = true }
primp = "1.2.2"
scraper = "0.22"
tokio = { workspace = true }
url = "2"

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
